# VitaForge

./: .gitattributes  .gitignore  DEVLOG.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  tach.toml
backend/alembic/: env.py
backend/alembic/versions/: 6779cc6938a9_initial_schema.py  a1b2c3d4e5f6_water_and_photos.py  a1f2c3d4e5b6_foods_trgm_search_index.py  a7b8c9d0e1f2_reminders.py  b2c3d4e5f6a7_foods_bilingual_names.py  b8c9d0e1f2a3_device_push_tokens.py  c3d4e5f6a7b8_email_tokens.py  c9d0e1f2a3b4_foods_priority.py  d4e5f6a7b8c9_legal_documents.py  e5f6a7b8c9d0_profile_target_weight.py  f6a7b8c9d0e1_recipes.py
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  email.py  event_topics.py  events.py  i18n.py  logging.py  nutrition_math.py  params.py  ratelimit.py  security.py
backend/app/shared/: base_model.py  base_schema.py  exceptions.py  pagination.py
backend/scripts/: gen_vapid.py  import_foods.py  import_off.py  seed_foods.py  seed_staples_i18n.py
backend/scripts/data/: seed_foods.json  (+1 more)
backend/tests/: conftest.py  test_account.py  test_admin.py  test_analytics.py  test_auth.py  test_calibration.py  test_coaching.py  test_diary.py  test_email_auth.py  test_foods.py  test_i18n.py  test_import_mappers.py  test_legal.py  test_nutrition_math.py  test_profile_nutrition.py  test_public.py  test_ratelimit.py  test_recipes.py  test_reminders.py  test_seed_foods.py  test_staples_i18n.py  test_subscribers.py  test_weight.py
(+260 files in other folders)
